# otus-cpp-prof-hw-06-matrix

./: CMakeLists.txt  Doxyfile  README.md  cell_handler.h  cell_value.h  graph_legend.html  index.html  main.cpp  matrix.h
.github/workflows/: release.yml
